flux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: embedding-api
  namespace: embedded-api
spec:
  selector:
    app: embedding-api
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: embedded-api
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 80
      targetPort: 4180
